force-app/main/default/objects/User/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>