force-app/main/default/objects/User/fields/Innova_Queue_Membership1__c.field-meta.xml
<CustomField>
    <fullName>Innova_Queue_Membership1__c</fullName>
    <label>Queue Membership1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>