force-app/main/default/objects/User/fields/Innova_Queue_Membership__c.field-meta.xml
<CustomField>
    <fullName>Innova_Queue_Membership__c</fullName>
    <label>Queue Membership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>