force-app/main/default/objects/User/fields/Innova_UPN__c.field-meta.xml
<CustomField>
    <fullName>Innova_UPN__c</fullName>
    <label>UPN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>