force-app/main/default/objects/User/fields/Inoova_Queue_Membership2__c.field-meta.xml
<CustomField>
    <fullName>Inoova_Queue_Membership2__c</fullName>
    <label>Queue Membership2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>