force-app/main/default/objects/User/fields/ITSC_Agent__c.field-meta.xml
<CustomField>
    <fullName>ITSC_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITSC Agent</label>
    <type>Checkbox</type>
</CustomField>