force-app/main/default/objects/User/fields/ITSC_Employee__c.field-meta.xml
<CustomField>
    <fullName>ITSC_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITSC Employee</label>
    <type>Checkbox</type>
</CustomField>