force-app/main/default/objects/User/fields/No_Cases__c.field-meta.xml
<CustomField>
    <fullName>No_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Cases</label>
    <type>Checkbox</type>
</CustomField>