force-app/main/default/objects/User/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Europe - Belgium, France</fullName>
            </value>
            <value>
                <fullName>Europe - Eastern</fullName>
                <isActive>false</isActive>
                <label>Europe - Eastern</label>
            </value>
            <value>
                <fullName>Europe - GMT</fullName>
                <isActive>false</isActive>
                <label>Europe - GMT</label>
            </value>
            <value>
                <fullName>Europe - UK</fullName>
            </value>
            <value>
                <fullName>Europe - Western</fullName>
                <isActive>false</isActive>
                <label>Europe - Western</label>
            </value>
            <value>
                <fullName>India - Standard</fullName>
            </value>
            <value>
                <fullName>Mexico - Central</fullName>
            </value>
            <value>
                <fullName>Mexico - Eastern</fullName>
            </value>
            <value>
                <fullName>Mexico - Mountain</fullName>
            </value>
            <value>
                <fullName>Mexico - Pacific</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Taipei</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
            <value>
                <fullName>USA / Canada - Central</fullName>
            </value>
            <value>
                <fullName>USA / Canada - Eastern</fullName>
            </value>
            <value>
                <fullName>USA / Canada - Mountain</fullName>
            </value>
            <value>
                <fullName>USA / Canada - Pacific</fullName>
            </value>
            <value>
                <fullName>USA - Hawaii</fullName>
            </value>
            <value>
                <fullName>USA - Phoenix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>