force-app/main/default/objects/User/fields/Unique_Auto_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Auto_ID__c</fullName>
    <displayFormat>Inn-{0000}</displayFormat>
    <label>Unique Auto ID</label>
    <type>AutoNumber</type>
</CustomField>