force-app/main/default/objects/User/listViews/inactive_users.listView-meta.xml
<ListView>
    <fullName>inactive_users</fullName>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>inactive users</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>