force-app/main/default/objects/User/listViews/Manually_Created.listView-meta.xml
<ListView>
    <fullName>Manually_Created</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>notEqual</operation>
        <value>Azure Integration</value>
    </filters>
    <label>Manually Created</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>